--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-between border-navy">
+    <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
         <div class="d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="/dashboard"><h2>notehub</h2></a>
             <div class="d-flex justify-content-between ml-2">
@@ -32,12 +32,18 @@
             <div class="col">
                 <h1>recents</h1>
                 {% for chapter in chapters %}
-                    <div class = "card mb-1">
-                        <h3 class="card-title">{{chapter.title}}</h3>
-                        <p>{{chapter.created_at.strftime('%m-%d-%Y')}}</p>
-                        <p class="card-text">{{chapter.schools[0].school_name}}</p>
-                        <p>{{chapter.courses[0].course_name}}</p>
-                        <p>{{chapter.availability}}</p>
+                    <div class = "card mb-1 p-2">
+                        <a href="/view/note/{{chapter.id}}">
+                        <span class="d-flex justify-content-between align-items-center">
+                            <h3 class="card-title">{{chapter.title}}</h3>
+                            <p>{{chapter.created_at.strftime('%m-%d-%Y')}}</p>
+                        </span>
+                        <h5>{{chapter.courses[0].course_name}}</h5>
+                        <span class="d-flex justify-content-between align-items-center">
+                            <h6 class="card-text">{{chapter.schools[0].school_name}}</h6>
+                            <p>{{chapter.availability}}</p>
+                        </span>
+                        </a>
                     </div>
                 {% endfor %}
             </div>
