--- a/flask_app/templates/create_notes.html
+++ b/flask_app/templates/create_notes.html
@@ -5,12 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title></title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/style.css">
+        <link rel="stylesheet" href="../static/css/createNotes.css">
+        <link rel="stylesheet" href="../static/css/style.css">
         <script src="../static/script.js" defer></script>
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-between border-navy">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
             <div class="d-flex justify-content-between align-items-center">
                 <a class="navbar-brand" href="/dashboard"><h2>notehub</h2></a>
                 <div class="d-flex justify-content-between ml-2">
@@ -47,10 +48,10 @@
                         <input type="hidden" name='timestamp' value="" id="timestamp">
                         <input type="hidden" name='chapter_id' value="{{chapter.id}}">
                         <label for="header">Header:</label>
-                        <input type="text" name="header" id="header" class="form-control" >
+                        <input type="text" name="header" id="header" class="form-control notetaking" >
                         <label for="note">Note:</label>
-                        <textarea class="form-control" id="note" name="note" rows="8"></textarea>
-                        <input type="submit" class="btn btn-primary mt-2" id="submit">
+                        <textarea class="form-control notetaking" id="note" name="note" rows="8"></textarea>
+                        <input type="submit" class="btn bg-color mt-2" id="submit">
                     </form>
                 </div>
                 <div class="col">
