--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
@@ -26,8 +26,8 @@
         <div class="row">
             <div class="col">
                 <h1>welcome!</h1>
-                <a href="/create/chapter"><button>take notes</button></a>
-                <a href="/explore/notes"><button>explore</button></a>
+                <a href="/create/chapter"><button class="dashboard-option">take notes</button></a>
+                <a href="/explore/notes"><button class="dashboard-option">explore</button></a>
             </div>
             <div class="col">
                 <h1>recents</h1>
