--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
         <div class="d-flex justify-content-between align-items-center">
-            <a class="navbar-brand" href="/dashboard"><h2>notehub</h2></a>
+            <a class="navbar-brand" href="/dashboard"><h2>Note<span class="website-name-hub">Hub</span></h2></a>
             <div class="d-flex justify-content-between ml-2">
                 <a href="/dashboard" class="ml-2 mr-2 font-weight-bold navbar-link">home</a> |
                 <a href="/all/notes" class="ml-2 mr-2 font-weight-bold navbar-link">notes</a> |
