--- a/flask_app/templates/explore.html
+++ b/flask_app/templates/explore.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-between border-navy">
+    <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
         <div class="d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="/dashboard"><h2>notehub</h2></a>
             <div class="d-flex justify-content-between ml-2">
@@ -43,13 +44,11 @@
                     <td>{{chapter.users[0].first_name}}</td>
                     <td>
                         <a href="/view/note/{{chapter.id}}">View</a>
-                        <form action="/favorite/note" method="POST">
-                            {% if chapter.id in favorites %}
-                                <a href="/unfavorite/chapter/{{chapter.id}}">Unfavorite</a>
-                            {% else %}
-                                <button name="chapter_id" value="{{chapter.id}}">Favorite</button>
-                            {% endif %}
-                        </form>
+                        {% if chapter.id in favorites %}
+                            <a href="/unfavorite/chapter/{{chapter.id}}">Unfavorite</a>
+                        {% else %}
+                            <a href="/favorite/note/{{chapter.id}}">Favorite</a>
+                        {% endif %}
                     </td>
                 </tr>
                 {% endfor %}
