--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     <div class="container">
+        <div class="title">
+            <h1>Note<span class="website-name-hub">Hub</span></h1>
+            <h5>The online notetaking platform for Zoomers</h5>
+        </div>
         <div class="row">
             <div class="col form-group">
                 <h2>Register</h2>
