--- a/flask_app/templates/edit_chapter.html
+++ b/flask_app/templates/edit_chapter.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-between border-navy">
+    <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
         <div class="d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="/dashboard"><h2>notehub</h2></a>
             <div class="d-flex justify-content-between ml-2">
@@ -23,19 +24,26 @@
         </div>
     </nav>
     <div class="container">
-        <form action="/edit" method="POST">
+        <form action="/edit/{{chapter.id}}" method="POST">
+            {% with messages = get_flashed_messages(category_filter = ['chapter']) %}     
+                {% if messages %}                            
+                    {% for message in messages %}
+                        <p>{{message}}</p> 
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <div style="border-bottom:orange; border-bottom-width:5px; border-bottom-style:solid;">
                 <input type="hidden" name="chapter_id" value="{{chapter.id}}">
                 <label for="title">Title:</label>
                 <input type="text" name="title" value="{{chapter.title}}" class="form-control">
-                <!-- <label for="school">School</label>
-                <input type="text" name="school" value="{{chapter.schools[0].school_name}}" class="form-control">
+                <label for="school">School</label>
+                <input type="text" name="school_name" value="{{chapter.schools[0].school_name}}" class="form-control">
                 <label for="course">Course:</label>
-                <input type="text" name="course" value="{{chapter.courses[0].course_name}}" class="form-control"> -->
-                <input type="radio" id="html" name="availability" value="private">
-                <label for="html">Private</label><br>
-                <input type="radio" id="css" name="availability" value="public">
-                <label for="css">Public</label><br>   
+                <input type="text" name="course_name" value="{{chapter.courses[0].course_name}}" class="form-control">
+                <input type="radio" name="availability" value="private">
+                <label for="availability">Private</label><br>
+                <input type="radio" name="availability" value="public">
+                <label for="availability">Public</label><br>   
             </div>
             <input type="hidden" name="num_of_notes" value="{{chapter.notes|length}}"/>
         {%  for note in chapter.notes %}
