--- a/flask_app/templates/create_notes.html
+++ b/flask_app/templates/create_notes.html
@@ -51,7 +51,7 @@
                         <input type="text" name="header" id="header" class="form-control notetaking" >
                         <label for="note">Note:</label>
                         <textarea class="form-control notetaking" id="note" name="note" rows="8"></textarea>
-                        <input type="submit" class="btn bg-color mt-2" id="submit">
+                        <input type="submit" class="btn submit-btn mt-2" id="submit">
                     </form>
                 </div>
                 <div class="col">
