--- a/flask_app/templates/edit_chapter.html
+++ b/flask_app/templates/edit_chapter.html
@@ -40,9 +40,9 @@
                 <input type="text" name="school_name" value="{{chapter.schools[0].school_name}}" class="form-control">
                 <label for="course">Course:</label>
                 <input type="text" name="course_name" value="{{chapter.courses[0].course_name}}" class="form-control">
-                <input type="radio" name="availability" value="private">
+                <input type="radio" name="availability" value="Private">
                 <label for="availability">Private</label><br>
-                <input type="radio" name="availability" value="public">
+                <input type="radio" name="availability" value="Public">
                 <label for="availability">Public</label><br>   
             </div>
             <input type="hidden" name="num_of_notes" value="{{chapter.notes|length}}"/>
