--- a/flask_app/templates/view_note.html
+++ b/flask_app/templates/view_note.html
@@ -27,7 +27,7 @@
         <h1>{{chapter.title}}</h1>
         <h5>Favorites: {{favorites}}</h5>
         {%  for note in chapter.notes %}
-            <div class = "card mb-1">
+            <div class = "card mb-1 p-2">
                 <h3 class="card-title">{{note.header}}</h3>
                 <p class="card-text">{{note.note}}</p>
                 <p>{{note.timestamp}}</p>
