--- a/flask_app/templates/create_chapter.html
+++ b/flask_app/templates/create_chapter.html
@@ -35,10 +35,10 @@
                         <input type="text" name="school_name" class="form-control">
                         <label for="course_name">Course: </label>
                         <input type="text" name="course_name" class="form-control">
-                        <input type="radio" id="html" name="availability" value="private">
-                        <label for="html">Private</label><br>
-                        <input type="radio" id="css" name="availability" value="public">
-                        <label for="css">Public</label><br>                   
+                        <input type="radio" name="availability" value="Private">
+                        <label for="availability">Private</label><br>
+                        <input type="radio" name="availability" value="Public">
+                        <label for="availability">Public</label><br>
                     </div>
                 </div>
                 <input type="submit" value="Create">
