--- a/flask_app/templates/all_notes.html
+++ b/flask_app/templates/all_notes.html
@@ -44,8 +44,8 @@
                     <td>{{chapter.schools[0].school_name}}</td>
                     <td>{{chapter.availability}}</td>
                     <td>
-                        <a href="/view/note/{{chapter.id}}">View</a>
-                        <a href="/edit/note/{{chapter.id}}">Edit</a>
+                        <a href="/view/note/{{chapter.id}}">View</a> |
+                        <a href="/edit/note/{{chapter.id}}">Edit</a> |
                         <a href="/delete/note/{{chapter.id}}">Delete</a>  <!----Need to fix cascade delete in Chapters table-->
                     </td>
                 </tr>
