--- a/flask_app/templates/create_chapter.html
+++ b/flask_app/templates/create_chapter.html
@@ -41,7 +41,7 @@
                         <label for="availability">Public</label><br>
                     </div>
                 </div>
-                <input type="submit" value="Create">
+                <input type="submit" value="Create" class="submit-btn">
                 {% with messages = get_flashed_messages(category_filter = ['chapter']) %}     
                 {% if messages %}                            
                     {% for message in messages %}
