--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -13,24 +13,24 @@
         <div class="d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="/dashboard"><h2>Note<span class="website-name-hub">Hub</span></h2></a>
             <div class="d-flex justify-content-between ml-2">
-                <a href="/dashboard" class="ml-2 mr-2 font-weight-bold navbar-link">home</a> |
-                <a href="/all/notes" class="ml-2 mr-2 font-weight-bold navbar-link">notes</a> |
-                <a href="/favorites" class="ml-2 mr-2 font-weight-bold navbar-link">favorites</a> |
+                <a href="/dashboard" class="ml-2 mr-2 font-weight-bold navbar-link">Home</a> |
+                <a href="/all/notes" class="ml-2 mr-2 font-weight-bold navbar-link">Notes</a> |
+                <a href="/favorites" class="ml-2 mr-2 font-weight-bold navbar-link">Favorites</a> 
             </div>
         </div>
         <div class="my-2 my-lg-0">
-            <a href="/logout" class="font-weight-bold navbar-link">logout</a>
+            <a href="/logout" class="font-weight-bold navbar-link">Logout</a>
         </div>
     </nav>
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>welcome!</h1>
-                <a href="/create/chapter"><button class="dashboard-option">take notes</button></a>
-                <a href="/explore/notes"><button class="dashboard-option">explore</button></a>
+                <h1>Welcome!</h1>
+                <a href="/create/chapter"><button class="dashboard-option">Take Notes</button></a>
+                <a href="/explore/notes"><button class="dashboard-option">Explore</button></a>
             </div>
             <div class="col">
-                <h1>recents</h1>
+                <h1>Recents</h1>
                 {% for chapter in chapters %}
                     <div class = "card mb-1 p-2">
                         <a href="/view/note/{{chapter.id}}">
