--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/createNotes.css">
 </head>
 <body>
     <div class="container">
@@ -28,7 +29,7 @@
                     <input type="password" name="password" class="form-control">
                     <label for="confirm_password">Confirm Password: </label>
                     <input type="password" name="confirm_password" class="form-control">
-                    <input type="submit" value = "Register">
+                    <input type="submit" value = "Register" class="submit-btn mt-2">
                 </form>
                 {% with messages = get_flashed_messages(category_filter = ['register']) %}     <!-- declare a variable called messages -->
                     {% if messages %}                            <!-- check if there are any messages -->
@@ -46,7 +47,7 @@
                     <input type="text" name="email" class="form-control">
                     <label for="password">Password: </label>
                     <input type="password" name="password" class="form-control">
-                    <input type="submit" value = "Login">
+                    <input type="submit" value = "Login" class="submit-btn mt-2">
                 </form>
                 {% with messages = get_flashed_messages(category_filter = ['login']) %}     <!-- declare a variable called messages -->
                     {% if messages %}                            <!-- check if there are any messages -->
