--- a/flask_app/templates/all_notes.html
+++ b/flask_app/templates/all_notes.html
@@ -13,15 +13,15 @@
 <body>
     <nav class="navbar navbar-expand-lg d-flex justify-content-between header">
         <div class="d-flex justify-content-between align-items-center">
-            <a class="navbar-brand" href="/dashboard"><h2>notehub</h2></a>
+            <a class="navbar-brand" href="/dashboard"><h2>Note<span class="website-name-hub">Hub</span></h2></a>
             <div class="d-flex justify-content-between ml-2">
-                <a href="/dashboard" class="ml-2 mr-2 font-weight-bold navbar-link">home</a> |
-                <a href="/all/notes" class="ml-2 mr-2 font-weight-bold navbar-link">notes</a> |
-                <a href="/favorites" class="ml-2 mr-2 font-weight-bold navbar-link">favorites</a> |
+                <a href="/dashboard" class="ml-2 mr-2 font-weight-bold navbar-link">Home</a> |
+                <a href="/all/notes" class="ml-2 mr-2 font-weight-bold navbar-link">Notes</a> |
+                <a href="/favorites" class="ml-2 mr-2 font-weight-bold navbar-link">Favorites</a> 
             </div>
         </div>
         <div class="my-2 my-lg-0">
-            <a href="/logout" class="font-weight-bold navbar-link">logout</a>
+            <a href="/logout" class="font-weight-bold navbar-link">Logout</a>
         </div>
     </nav>
     <div class="container">
