--- a/flask_app/templates/create_chapter.html
+++ b/flask_app/templates/create_chapter.html
@@ -32,9 +32,19 @@
                         <label for="title">Title: </label>
                         <input type="text" name="title" class="form-control">
                         <label for="school_name">School: </label>
-                        <input type="text" name="school_name" class="form-control">
+                        <input type="text" name="school_name" list="schools" class="form-control">
+                        <datalist id="schools">
+                            {% for school in schools %}
+                                <option>{{school.school_name}}</option>
+                            {% endfor %}
+                        </datalist>
                         <label for="course_name">Course: </label>
-                        <input type="text" name="course_name" class="form-control">
+                        <input type="text" name="course_name" list="courses" class="form-control">
+                        <datalist id="courses">
+                            {% for course in courses %}
+                                <option>{{course.course_name}}</option>
+                            {% endfor %}
+                        </datalist>
                         <input type="radio" name="availability" value="Private">
                         <label for="availability">Private</label><br>
                         <input type="radio" name="availability" value="Public">
