Fix bug that made buttons bigger than its size

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -27,8 +27,8 @@
         <div class="row">
             <div class="col">
                 <h1>Welcome!</h1>
-                <a href="/create/chapter"><button class="dashboard-option">Take Notes</button></a>
-                <a href="/explore/notes"><button class="dashboard-option">Explore</button></a>
+                <form action="/create/chapter"><button class="dashboard-option">Take Notes</button></form>
+                <form action="/explore/notes"><button class="dashboard-option">Explore</button></form>
             </div>
             <div class="col">
                 <h1>Recents</h1>
